# embedding-health

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: embeddings.jsonl
src/embedding_health/: __init__.py  __main__.py  checks.py  cli.py  io.py  models.py
tests/: test_embedding_health.py
